--- a/objects/library-app/index.html
+++ b/objects/library-app/index.html
@@ -7,7 +7,33 @@
   </head>
   <body>
     <h1>Library App <small>From TOP projects</small></h1>
+    <div class="input-form-container">
+      <form action="">
+        <div class="input-container">
+          <label for="title">title:</label>
+          <input type="text" name="title" id="title">
+        </div>
+        <!-- title, author, pages, read -->
+        <div class="input-container">
+          <label for="author">author:</label>
+          <input type="text" name="author" id="author">
+        </div>
+        <div class="input-container">
+          <label for="pages">pages:</label>
+          <input type="text" name="pages" id="pages">
+        </div>
+        <div class="input-container">
+          <label>read:</label>
+          <label for="read-true">Yes</label>
+          <!-- <input type="text" name="read" id="read"> -->
+          <input type="radio" id="read-true" name="read" value="true">
+          <label for="read-false">No</label>
+          <input type="radio" id="read-false" name="read" value="false">
+        </div>
 
+        <input type="submit" name="" value="create book">
+      </form>
+    </div>
 
 
     <script type="text/javascript" src="books.js"></script>
