--- a/apis/usefetch.html
+++ b/apis/usefetch.html
@@ -5,20 +5,26 @@
     <title></title>
   </head>
   <body>
-  <img src="#" />
+    <button id="fetch-another">Get another</button>
+    <img src="#" />
+
 
   <script>
       const img = document.querySelector('img');
-
-      fetch('https://jsonplaceholder.typicode.com/photos/1', {mode: 'cors'})
-      .then(function(response) {
-        return response.json();
-      })
-      .then(function(response) {
-        console.log(response.url);
-        img.src = response.url;
-      });
-
+      const btn = document.querySelector('#fetch-another');
+      const getImage = function() {
+        const id = Math.floor((Math.random() * 100) + 1);
+        fetch('https://jsonplaceholder.typicode.com/photos/'+id, {mode: 'cors'})
+        .then(function(response) {
+          return response.json();
+        })
+        .then(function(response) {
+          console.log(response.url);
+          img.src = response.url;
+        });
+      }
+      getImage();
+      btn.addEventListener('click', getImage);
   </script>
   </body>
 </html>
