--- a/forms/constrainvalidationAPI/custom-error.html
+++ b/forms/constrainvalidationAPI/custom-error.html
@@ -2,12 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <style>
+      input:valid {
+        border: 2px solid greenyellow;
+      }
+    </style>
     <title>constraint validation API</title>
   </head>
   <body>
     <form>
       <label for="mail">I would like you to provide me with an e-mail address:</label>
-      <input type="email" id="mail" name="mail">
+      <input type="email" id="mail" name="mail" required>
       <button>Submit</button>
     </form>
 
