--- a/utils/tabs.html
+++ b/utils/tabs.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="device-width, initial-scale=1">
     <style media="screen">
       .hidden{
         display: none;
